fix(MultiSelect): fix options dark mode styles

--- a/packages/themes/src/morpheme/_multi-select.dark.scss
+++ b/packages/themes/src/morpheme/_multi-select.dark.scss
@@ -19,6 +19,7 @@
 
     /* dropdown */
     --v-multi-select-dropdown-bg-color: var(--color-gray-true-800);
+    --v-multi-select-dropdown-border-color: var(--color-gray-true-700);
 
     // hint
     --v-multi-select-hint-color: var(--color-gray-true-500);
