--- a/packages/themes/src/morpheme/_multi-select.scss
+++ b/packages/themes/src/morpheme/_multi-select.scss
@@ -45,6 +45,7 @@
   /* dropdown */
   --v-multi-select-dropdown-bg-color: var(--color-white);
   --v-multi-select-dropdown-border-radius: var(--border-radius-lg);
+  --v-multi-select-dropdown-border-color: var(--color-gray-300);
 
   // hint
   --v-multi-select-hint-font-size: var(--v-input-hint-font-size, 14px);
@@ -153,7 +154,7 @@
     overflow: auto; // Equivalent to overflow-auto
     box-shadow: var(--effect-shadow-md);
     max-height: 15rem; // Equivalent to max-h-60
-    border: 1px solid var(--color-gray-300);
+    border: 1px solid var(--v-multi-select-dropdown-border-color);
     outline: none; // Equivalent to focus:outline-none
     font-size: 0.875rem; // Equivalent to sm:text-sm
     padding-inline-start: 0; // Equivalent to px-0
